# 2d-engine

./: CMakeLists.txt  main.cpp
source/: main.cpp
source/config/: window.ini
source/e2d/: engine2d.cpp  engine2d.h  state.cpp  state.h
source/e2d/states/: gameState.cpp  gameState.h  state.cpp  state.h
source/libs/e2d/: engine2d.cpp  engine2d.h  state.cpp  state.h
